Update working copy with CRLF warnings

--- a/src/prototipogym/view/procesos/Cobros.form
+++ b/src/prototipogym/view/procesos/Cobros.form
@@ -89,7 +89,7 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="Date" alignment="0" max="32767" attributes="0"/>
+                              <Component id="DateC" alignment="0" max="32767" attributes="0"/>
                               <Component id="txtIDCliente" alignment="0" max="32767" attributes="0"/>
                               <Component id="txtID" alignment="0" min="-2" pref="111" max="-2" attributes="0"/>
                           </Group>
@@ -100,10 +100,11 @@
                               <Component id="jLabel7" min="-2" pref="41" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="txtConcepto" min="-2" pref="111" max="-2" attributes="0"/>
-                              <Component id="txtValorCobro" min="-2" pref="111" max="-2" attributes="0"/>
-                              <Component id="btnImprimir" min="-2" pref="111" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="txtConcepto" pref="111" max="32767" attributes="0"/>
+                              <Component id="txtValorCobro" pref="111" max="32767" attributes="0"/>
+                              <Component id="btnImprimir" pref="111" max="32767" attributes="0"/>
+                              <Component id="etiqueta" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -135,7 +136,7 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="Date" min="-2" pref="30" max="-2" attributes="0"/>
+                                      <Component id="DateC" min="-2" pref="30" max="-2" attributes="0"/>
                                       <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="txtConcepto" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -151,7 +152,9 @@
                               <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="46" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="etiqueta" pref="22" max="32767" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="btnGuardar" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btnLimpiar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -203,7 +206,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="Date">
+        <Component class="com.toedter.calendar.JDateChooser" name="DateC">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -339,6 +342,13 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button1ActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="etiqueta">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
