--- a/src/prototipogym/view/movimientos/Cuotas.form
+++ b/src/prototipogym/view/movimientos/Cuotas.form
@@ -82,7 +82,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="164" max="-2" attributes="0"/>
-                          <Component id="etiqueta" min="-2" max="-2" attributes="0"/>
+                          <Component id="etiqueta" min="-2" pref="56" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="14" pref="144" max="32767" attributes="0"/>
@@ -354,7 +354,9 @@
         </Component>
         <Component class="java.awt.Label" name="etiqueta">
           <Properties>
-            <Property name="text" type="java.lang.String" value="label1"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
